Show e2e test of serialization and deserialization changes to User
Signed-off-by: Craig Perkins <cwperx@amazon.com>